Update Act5_PUPMap project files

--- a/Act5_PUPMap/PUPmap.html
+++ b/Act5_PUPMap/PUPmap.html
@@ -61,15 +61,15 @@
             <!-- obelisk -->
             <button id="obelisk" title="Obelisk"></button>
 
+            <!-- mabini shrine and museum -->
+            <button id="shrine" title="Mabini Musuem and Shrine"></button>
+
         <!-- Right Side -->
             <!-- Pylon -->
             <button id="pylon" title="Pylon"></button>
 
             <!-- Mural -->
             <button id="mural" title="PUP Mural"></button>
-
-            <!-- Visitor Lounge -->
-            <button id="visitors" title="Visitor Lounge"></button>
 
             <!-- Gymnasium Lounge -->
             <button id="gym" title="Gymnasium"></button>
