--- a/Act5_PUPMap/LeftParts/mainBldg.html
+++ b/Act5_PUPMap/LeftParts/mainBldg.html
@@ -1,66 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Building Info</title>
-        
-    <style>
-
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>PUP Main Building</title>
+<style>
     body {
         margin: 0;
-        font-family: Arial, sans-serif;
-        color: #111;
-        height: 100vh;
-        overflow-y: auto;
-        backdrop-filter: blur(10px);
-        padding: 20px;
+        font-family:Georgia, 'Times New Roman', Times, serif;
+        background: transparent;
+        color: #000;
     }
 
+    .panel {
+        position: relative;
+        width: 100%;
+        height: 100vh;
+        overflow-y: auto;
+        background: rgba(255, 255, 255, 0.9);
+        backdrop-filter: blur(8px);
+        border-radius: 20px;
+        box-shadow: 0 0 10px rgba(0,0,0,0.15);
+        padding: 25px;
+        box-sizing: border-box;
+    }
 
     .close-btn {
         position: absolute;
         top: 15px;
         left: 20px;
+        font-size: 22px;
+        font-weight: bold;
+        cursor: pointer;
         background: transparent;
         border: none;
-        font-size: 1.5rem;
-        cursor: pointer;
         color: #333;
     }
 
-    .close-btn:hover {
-        color: red;
-    }
-
-    h1 {
-        color: #b00000;
+    .header-img {
+        width: 100%;
+        height: 500px;
+        border-radius: 10px;
+        object-fit: cover;
+        margin-top: 20px;
         margin-bottom: 15px;
     }
 
-    p {
+    .title {
+        font-size: 30px;
+        font-weight: 700;
+        margin-bottom: 5px;
+        color: #a30e0e;
+    }
+
+    .subtitle {
+        font-size: 14px;
+        color: #444;
+        margin-bottom: 15px;
+    }
+
+    .content {
+        text-align: justify;
+        font-size: 14px;
         line-height: 1.6;
+        margin-bottom: 20px;
+    }
+
+    h3 {
+        margin-top: 15px;
+        margin-bottom: 5px;
+        font-size: 15px;
+        font-weight: 700;
+        color: #a30e0e;
+    }
+
+    ul {
+        padding-left: 20px;
+        margin: 5px 0 15px 0;
+    }
+
+    li {
+        margin-bottom: 6px;
+    }
+
+    .other-images {
+        margin-top: 25px;
+    }
+
+    .other-images img {
+        width: 100%;
+        height: 500px;
+        border-radius: 10px;
+        object-fit: cover;
+    }
+
+    .otherpa img{
+        width: 100%;
+        height: 700px;
+        border-radius: 10px;
+        object-fit: cover;
+    }
+
+    /* scrollbar */
+    ::-webkit-scrollbar {
+        width: 8px;
+    }
+    ::-webkit-scrollbar-thumb {
+        background: #a30e0e;
+        border-radius: 4px;
     }
 </style>
-
-
 </head>
 <body>
-<div class="panel">
-    <button class="close-btn" onclick="closePanel()">×</button>
-    <h1>Main Academic Building</h1>
-    <p>
-    The Main Building serves as the central hub for administration and major academic departments at PUP Sta. Mesa.
-    </p>
-    <p>
-    It houses key offices, lecture halls, and faculty rooms used for a variety of programs under the College of Communication and other colleges.
-    </p>
-</div>
+    <div class="panel">
+        <button class="close-btn" onclick="window.parent.closePanel()">×</button>
+        <img src="../imagesAsset/mainBldg/bldg1.jpg" alt="PUP Main Building" class="header-img">
 
-<script>
-    function closePanel() {
-    window.parent.postMessage('closePanel', '*');
-    }
-</script>
+        <div class="title">PUP Main Building</div>
+        <div class="subtitle">A. Mabini Campus, Sta. Mesa - 14.596990, 121.010779</div>
+
+        <div class="content">
+            
+            <p>
+                The Main Building of the Polytechnic University of the Philippines, Sta. Mesa serves as the heart of the university and the center of its academic and administrative operations. Located along Anonas Street, Sta. Mesa, Manila, this building is recognized as the first academic structure constructed within the university's main campus, also known as the A. Mabini Campus.
+            </p>
+            <p>
+                As one of PUP’s most iconic landmarks, the Main Building symbolizes the university’s long-standing commitment to accessible and quality education for the Filipino people. It houses several vital offices, including the Office of the University Registrar, college departments, and other key administrative units that support both students and faculty.
+            </p>
+
+            <h3>Significance and Features:</h3>
+            <ul>
+                <li>Serves as the administrative and academic hub of the university.</li>
+                <li>Considered a historical structure as it was the first major building built in the main campus area.</li>
+                <li>Acts as the anchor point of the 10.71-hectare A. Mabini Campus, surrounded by other major facilities such as the Mabini Shrine, Ninoy Aquino Library and Learning Resources Center, and Freedom Park.</li>
+            </ul>
+
+            <h3>Key Notes:</h3>
+            <ul>
+                <li>The A. Mabini Campus covers approximately 10.71 hectares, with the Main Building centrally located for accessibility and orientation.</li>
+                <li>Due to the increasing student population and modernization efforts, a new 9-storey academic building is currently being planned to replace or upgrade the existing Main Building structure.</li>
+                <li>Remains one of the most visited and photographed landmarks in the university, representing PUP’s history, progress, and identity.</li>
+            </ul>
+
+            <h3>Other Images:</h3>
+            <div class="other-images">
+                <img src="../imagesAsset/mainBldg/bldg2.jpg" alt="PUP Main Building Alternate View">
+            </div>
+            <div class="otherpa">
+                <img src="../imagesAsset/mainBldg/other1.jpg" alt="PUP Main Building Alternate View">
+                <img src="../imagesAsset/mainBldg/other2.jpg" alt="PUP Main Building Alternate View">
+            </div>
+
+        </div>
+    </div>
 </body>
 </html>
