--- a/Act5_PUPMap/RightParts/pool.html
+++ b/Act5_PUPMap/RightParts/pool.html
@@ -39,7 +39,7 @@
 
     .header-img {
         width: 100%;
-        height: 500px;
+        height: 300px;
         border-radius: 10px;
         object-fit: cover;
         margin-top: 20px;
@@ -132,7 +132,10 @@
 
             <div class="other-images">
                 <img src="../imagesAsset/pool/2.jpg" alt="PUP pool">
-                
+                <img src="../imagesAsset/pool/3.jpg" alt="PUP pool">
+                <img src="../imagesAsset/pool/4.jpg" alt="PUP pool">
+                <img src="../imagesAsset/pool/5.jpg" alt="PUP pool">
+                <img src="../imagesAsset/pool/6.jpg" alt="PUP pool">
             </div>
         </div>
     </div>
