Added Image for the Alumni Panel

--- a/Act5_PUPMap/RightParts/alumni.html
+++ b/Act5_PUPMap/RightParts/alumni.html
@@ -107,7 +107,7 @@
 <body>
     <div class="panel">
         <button class="close-btn" onclick="window.parent.closePanel()">×</button>
-        <img src="../imagesAsset/PE/" alt="PUP P.E" class="header-img">
+        <img src="../imagesAsset/P.E/1.jpg" alt="PUP P.E" class="header-img">
 
         <div class="title">PUP P.E. and Nutrition and Food Technology Research Building</div>
         <div class="subtitle">PUP P.E. Building, Teresa, Santa Mesa, Manila, 1008 Metro Manila</div>
@@ -130,8 +130,9 @@
 
             <h3>Other Images:</h3>
             <div class="other-images">
-                <img src="../imagesAsset/P.E/2.jpg" alt="PUP gym">
-                <img src="../imagesAsset/P.E/indoorfitness1.jpg" alt="PUP gym">
+                <img src="../imagesAsset/P.E/3.jpg" alt="PUP alumni">
+                <img src="../imagesAsset/P.E/2.jpg" alt="PUP alumni">
+                <img src="../imagesAsset/P.E/indoorfitness1.jpg" alt="PUP alumni">
                 <p>Indoor Fitness Gym</p>
             </div>
         </div>
